@@ -9,6 +9,38 @@ dependencies {
     implementation('org.apache.commons:commons-math3:3.6.1')
     implementation('mysql:mysql-connector-java:8.0.21')
     implementation('org.postgresql:postgresql:42.2.19')
+    implementation("com.microsoft.sqlserver:mssql-jdbc:9.2.1.jre8")
     implementation('com.zaxxer:HikariCP:4.0.3')
 }
 
+task(populationMain, dependsOn: 'classes', type: JavaExec) {
+    main = 'sjtu.ipads.wtune.testbed.PopulationMain'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(['--enable-preview'])
+}
+
+task(profileMain, dependsOn: 'classes', type: JavaExec) {
+    main = 'sjtu.ipads.wtune.testbed.ProfileMain'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(['--enable-preview'])
+}
+
+task(planMain, dependsOn: 'classes', type: JavaExec) {
+    main = 'sjtu.ipads.wtune.testbed.PlanMain'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(['--enable-preview'])
+}
+
+task(planMain2, dependsOn: 'classes', type: JavaExec) {
+    main = 'sjtu.ipads.wtune.testbed.PlanMain2'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(['--enable-preview'])
+}
+
+
+
+task(runQueryTest, dependsOn: 'classes', type: JavaExec) {
+    main = 'sjtu.ipads.wtune.testbed.DBQueryTestMain'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(['--enable-preview'])
+}
